--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Helvetica Neue', monospace;
-    background-color: #f6ebeb; /* Cream/neutral-toned background */
+    background-color: #eaeaea; /* Cream/neutral-toned background */
 }
 
 .container {
@@ -12,25 +12,20 @@ body {
     font-size: 18px;
 }
 
-/* .data-grid, .dance-grid {
-    display: none;
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 20px; 
-} */
-
 .grid-container {
     position: relative;
 }
 
 .data-grid, .dance-grid {
     position: absolute;
-    top: 0;
+    top: 60%;
     left: 0;
     opacity: 0;
     transition: opacity 0.5s ease-in-out; /* Adjust the duration and easing as needed */
     display: flex;
     flex-wrap: wrap;
-    width: 200px; /* Adjust the width of the grid */
+    justify-content: center; /* Center align items horizontally */
+    width: 100%; /* Adjust the width of the grid */
 }
 
 .data-grid.show, .dance-grid.show {
@@ -45,6 +40,17 @@ body {
     z-index: 2;
 }
 
+/* .grid-item {
+    background-color: #fff;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    width: calc(50% - 20px); 
+    box-sizing: border-box;
+    flex: 1 1 45%;
+} */
+
 .grid-item {
     background-color: #fff;
     padding: 10px;
@@ -53,13 +59,32 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     width: calc(50% - 20px); /* Two items in a row with 20px margin between them */
     box-sizing: border-box;
-    flex: 1 1 45%; /* Equal width for each item, with some margin */
+    flex: 1 1 35%; /* Equal width for each item, with some margin */
+    text-align: center;
+    height: 400px; /* Adjust the height as needed */
 }
 
+.grid-item img {
+    max-width: 80%;
+    max-height:80%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.grid-item p {
+    font-size: 14px;
+}
+
+.grid-item a {
+    text-decoration: none;
+    color: #3498db; /* Link color */
+}
+
+
 .navbar {
-    background-color: #333; /* Dark background color */
+    background-color: transparent;
     padding: 10px 0;
-    text-align: center;
+    text-align: right; /* Align links to the right */
 }
 
 .navbar ul {
@@ -78,7 +103,14 @@ body {
     color: #fff; /* White text color */
     font-weight: bold;
     font-size: 16px;
+    transition: color 0.3s ease-in-out; /* Smooth color transition */
 }
+
+.navbar a:hover {
+    color: #ddd; /* Change color on hover */
+}
+
+
 
 
 /* Add more styles for the navbar if needed */
