--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
-:root { font-family: 'Inter', sans-serif; }
+:root { 
+    font-family: 'Inter', sans-serif; 
+    --primary-color: black;
+    --highlight: #3498db;
+    --background: #eaeaea
+}
 @supports (font-variation-settings: normal) {
   :root { font-family: 'Inter var', sans-serif; }
+
 }
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #eaeaea; /* Cream/neutral-toned background */
+    background-color: var(--background); /* Cream/neutral-toned background */
 }
 
 .special-sentence {
@@ -16,7 +22,7 @@ body {
 .underline-link {
     text-decoration: none;
     position: relative;
-    color: #3498db;
+    color: var(--highlight);
     transition: color 0.3s ease-in-out;
 }
 
@@ -29,7 +35,19 @@ body {
     display: block;
     width: 0;
     height: 2px;
-    background-color: #3498db; /* Underline color */
+    background-color: var(--highlight);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: width 0.3s ease-in-out;
+}
+
+li.underline-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1px;
+    background-color: var(--primary-color);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -128,9 +146,9 @@ body {
 }
 
 .navbar .logo {
-    font-weight: bold;
+    font-weight: normal;
     font-size: 20px; /* Adjust the font size as needed */
-    color: rgb(0, 0, 0); /* Text color */
+    color: var(--primary-color); /* Text color */
     text-decoration: none;
     float: left;
 }
@@ -138,14 +156,14 @@ body {
 .navbar a {
     text-decoration: none;
     color: rgb(0, 0, 0); /* White text color */
-    font-weight: bold;
-    font-size: 16px;
+    font-weight: normal;
+    font-size: 12px;/* better to set the font sizes for responsiveness in a different css */
     transition: color 0.3s ease-in-out; /* Smooth color transition */
 }
-
+/* 
 .navbar a:hover {
-    color: #ddd; /* Change color on hover */
-}
+    color: #ddd; 
+} */
 
 
 
